mbm: add GPS location gathering support

The udev rules file is updated according to the list of devices
supporting gps features provided by the udev rules file from the
mbm-gpsd project.

https://bugs.freedesktop.org/show_bug.cgi?id=85008
(cherry picked from commit 534eea345dd8dda96a88559b621ab1a55028cee8)