plugins/mbm/mm-plugin-mbm.c
@@ -65,6 +65,35 @@ create_modem (MMPlugin *self,
                                                       product));
 }
 
+static gboolean
+grab_port (MMPlugin *self,
+           MMBaseModem *modem,
+           MMPortProbe *probe,
+           GError **error)
+{
+    MMPortSerialAtFlag pflags = MM_PORT_SERIAL_AT_FLAG_NONE;
+    GUdevDevice *port;
+    MMPortType port_type;
+
+    port_type = mm_port_probe_get_port_type (probe);
+    port = mm_port_probe_peek_port (probe);
+
+    if (g_udev_device_get_property_as_boolean (port, "ID_MM_ERICSSON_MBM_GPS_PORT")) {
+        mm_dbg ("(%s/%s) Port flagged as GPS",
+                mm_port_probe_get_port_subsys (probe),
+                mm_port_probe_get_port_name (probe));
+        port_type = MM_PORT_TYPE_GPS;
+    }
+
+    return mm_base_modem_grab_port (modem,
+                                    mm_port_probe_get_port_subsys (probe),
+                                    mm_port_probe_get_port_name (probe),
+                                    mm_port_probe_get_parent_path (probe),
+                                    port_type,
+                                    pflags,
+                                    error);
+}
+
 /*****************************************************************************/
 
 G_MODULE_EXPORT MMPlugin *
@@ -97,4 +126,6 @@ mm_plugin_mbm_class_init (MMPluginMbmClass *klass)
     MMPluginClass *plugin_class = MM_PLUGIN_CLASS (klass);
 
     plugin_class->create_modem = create_modem;
+    plugin_class->grab_port = grab_port;
+
 }
